--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </li>
                 </ul>
             </nav>
-            <button type="button" class="menu-mobile-btn" data-menu-open>
+            <button type="button" class="mobile-menu-btn" data-menu-open>
                 <svg class="mobile-menu-btn__icon" width="40px" height="40px">
                     <use href="./images/icons.svg#burger-menu_icon"></use>
                 </svg>
@@ -79,21 +79,26 @@
                     </li>
                 </ul>
                 <ul class="mobile-menu__contacts list">
+
+                    <li class="mobile-menu__contacts-list">
+                        <a href="tel:+380961111111" class="mobile-menu__contacts-phone link">
+                            +38 096 111 11 11</a>
+                    </li>
                     <Li class="mobile-menu__contacts-list">
-                        <a href="mailto:info@devstudio.com" class="contacts contacts-header__link link">
+                        <a href="mailto:info@devstudio.com" class="mobile-menu__contacts-mail link">
                             info@devstudio.com
                         </a>
                     </Li>
-                    <li class="mobile-menu__contacts-list">
-                        <a href="tel:+380961111111" class="contacts contacts-header__link link">
-                            +38 096 111 11 11</a>
-                    </li>
                 </ul>
-                <ul class="mobile-menu__social-list">
-                    <li class="mobile-menu__social-item"> <a href="" class="link">Instagram</a></li>
-                    <li class="mobile-menu__social-item"> <a href="" class="link">Twitter</a></li>
-                    <li class="mobile-menu__social-item"> <a href="" class="link">Facebook</a></li>
-                    <li class="mobile-menu__social-item"> <a href="" class="link">LinkedIn</a></li>
+                <ul class="mobile-menu__social-list list">
+                    <li class="mobile-menu__social-item"> <a href="" class="mobile-menu__social-link link">Instagram</a>
+                    </li>
+                    <li class="mobile-menu__social-item"> <a href="" class="mobile-menu__social-link link">Twitter</a>
+                    </li>
+                    <li class="mobile-menu__social-item"> <a href="" class="mobile-menu__social-link link">Facebook</a>
+                    </li>
+                    <li class="mobile-menu__social-item"> <a href="" class="mobile-menu__social-link link">LinkedIn</a>
+                    </li>
                 </ul>
             </div>
 
