--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <button type="button" class="main-button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
-        <!-- <section class="text section">
+        <section class="text section">
             <div class="container">
                 <ul class="main-text list">
                     <li class="main-text__items">
@@ -145,7 +145,7 @@
                         </div>
                         <h2 class=" main-text__themes ">Планирование</h2>
                         <p class="main-text__features">Равным образом консультация с широким активом в значительной
-                            степени обуславливает..</p>
+                            степени обуславливает.</p>
                     </li>
                     <li class="main-text__items">
                         <div class="main-text__images">
@@ -160,7 +160,7 @@
                     </li>
                 </ul>
             </div>
-        </section>-->
+        </section>
         <!-- <section class="description section">
             <div class="container">
                 <h2 class="description__title">Чем мы занимаемся</h2>
