hw8 member begin

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="description section">
+        <section class="description section">
             <div class="container">
                 <h2 class="description__title">Чем мы занимаемся</h2>
                 <ul class="description-pictures list">
@@ -180,8 +180,8 @@
                     </li>
                 </ul>
             </div>
-        </section>-->
-        <!--<section class="members section">
+        </section>
+        <section class="members section">
             <div class="container">
                 <h2 class="members-team">Наша команда</h2>
                 <ul class="member-list list">
@@ -321,7 +321,7 @@
                     </li>
                 </ul>
             </div>
-        </section>-->
+        </section>
         <!--<section class="clients section">
             <div class="container">
                 <h2 class="description__title">Постоянные клиенты</h2>
