--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </header>
 
     <main class="main-content">
-        <section class="hero">
+        <section class="hero section">
             <div class="container">
                 <h1 class="main-title">Эффективные решения <br>для вашего бизнеса</h1>
                 <button type="button" class="main-button" data-modal-open>Заказать услугу</button>
@@ -166,16 +166,38 @@
                 <h2 class="description__title">Чем мы занимаемся</h2>
                 <ul class="description-pictures list">
                     <li class="description-pictures__item">
-                        <img src=" ./images/whatwedo1.jpg" alt="работа на клавиатуре" width="370" height="294" />
+                        <picture>
+                            <source srcset="./images/whatwedo1.webp 1x, ./images/whatwedo1@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/whatwedo1.jpg 1x, ./images/whatwedo1@2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img src=" ./images/whatwedo1.jpg" alt="работа на клавиатуре" width="370" height="294" />
+                        </picture>
+
                         <p class="description-pictures__text-overlay">Десктопные приложения</p>
 
                     </li>
                     <li class="description-pictures__item">
-                        <img src="./images/whatwedo2.jpg" alt="телефон в руке" width="370" height="294" />
+                        <picture>
+                            <source srcset="./images/whatwedo2.webp 1x, ./images/whatwedo2@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/whatwedo2.jpg 1x, ./images/whatwedo2@2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img src="./images/whatwedo2.jpg" alt="телефон в руке" width="370" height="294" />
+                        </picture>
+
                         <p class="description-pictures__text-overlay">Мобильные приложения</p>
                     </li>
                     <li class="description-pictures__item">
-                        <img src="./images/whatwedo3.jpg" alt="палитра цветов на планшете" width="370" height="294" />
+                        <picture>
+                            <source srcset="./images/whatwedo3.webp 1x, ./images/whatwedo3@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/whatwedo3.jpg 1x, ./images/whatwedo3@2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img src="./images/whatwedo3.jpg" alt="палитра цветов на планшете" width="370"
+                                height="294" />
+                        </picture>
+
                         <p class="description-pictures__text-overlay">Дизайнерские решения</p>
                     </li>
                 </ul>
@@ -186,7 +208,25 @@
                 <h2 class="members-team">Наша команда</h2>
                 <ul class="member-list list">
                     <li class="member-list__description">
-                        <img src="./images/igor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+                        <picture>
+                            <source srcset="./images/igor.webp 1x, ./images/igor@2x.webp 2x" media="(min-width: 1200px)"
+                                type="image/webp" />
+                            <source srcset="./images/igor.jpg 1x, ./images/igor@2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <source
+                                srcset="./images/imagesTablet/igor-tablet.webp 1x, ./images/imagesTablet/igor-tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp" />
+                            <source
+                                srcset="./images/imagesTablet/igor-tablet.jpg 1x, ./images/imagesTablet/igor-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/imagesMobile/igor.webp 1x, /images/imagesMobile/igor@2x.webp 2x"
+                                media="(max-width: 767px)" type="image/webp" />
+                            <source srcset="./images/imagesMobile/igor.jpg 1x, ./images/imagesMobile/igor@2x.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <img src="./images/igor.jpg" alt="Игорь Демьяненко" />
+
+                        </picture>
+
                         <div class="members-wrapper">
                             <h3 class="members-name">Игорь Демьяненко</h3>
                             <p class="members-profession" lang="en">Product Designer </p>
@@ -221,7 +261,24 @@
                         </div>
                     </li>
                     <li class="member-list__description">
-                        <img src="./images/olga.jpg" alt="Ольга Репина" width="270" height="260" />
+                        <picture>
+                            <source srcset="./images/olga.webp 1x, ./images/olga@2x.webp 2x" media="(min-width: 1200px)"
+                                type="image/webp" />
+                            <source srcset="./images/olga.jpg 1x, ./images/olga@2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <source
+                                srcset="./images/imagesTablet/olga-tablet.webp 1x, ./images/imagesTablet/olga-tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp" />
+                            <source
+                                srcset="./images/imagesTablet/olga-tablet.jpg 1x, ./images/imagesTablet/olga-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)" />
+                            <source srcset="./images/imagesMobile/olga.webp 1x, /images/imagesMobile/olga@2x.webp 2x"
+                                media="(max-width: 767px)" type="image/webp" />
+                            <source srcset="./images/imagesMobile/olga.jpg 1x, ./images/imagesMobile/olga@2x.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <img src="./images/olga.jpg" alt="Ольга Репина" />
+                        </picture>
+
                         <div class="members-wrapper">
                             <h3 class="members-name">Ольга Репина</h3>
                             <p class="members-profession" lang="en">Frontend Developer</p>
@@ -254,7 +311,26 @@
                         </div>
                     </li>
                     <li class="member-list__description">
-                        <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
+                        <picture>
+                            <source srcset="./images/nikolay.webp 1x, ./images/nikolay@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/nikolay.jpg 1x, ./images/nikolay@2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <source
+                                srcset="./images/imagesTablet/nikolai-tablet.webp 1x, ./images/imagesTablet/nikolai-tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp" />
+                            <source
+                                srcset="./images/imagesTablet/nikolai-tablet.jpg 1x, ./images/imagesTablet/nikolai-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)" />
+                            <source
+                                srcset="./images/imagesMobile/nikolai.webp 1x, ./images/imagesMobile/nicolai@2x.webp 2x"
+                                media="(max-width: 767px)" type="image/webp" />
+                            <source
+                                srcset="./images/imagesMobile/nikolai.jpg 1x, ./images/imagesMobile/nikolai@2x.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <img src="./images/nikolay.jpg" alt="Николай Тарасов" />
+                        </picture>
+
                         <div class="members-wrapper">
                             <h3 class="members-name">Николай Тарасов</h3>
                             <p class="members-profession" lang="en">Marketing</p>
@@ -287,7 +363,25 @@
                         </div>
                     </li>
                     <li class="member-list__description">
-                        <img src="./images/mihail.jpg" alt="Михаил Ермаков" width="270" height="260" />
+                        <picture>
+                            <source srcset="./images/mihail.webp 1x, ./images/mihail@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp" />
+                            <source srcset="./images/mihail.jpg 1x, ./images/mihail@2x.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <source
+                                srcset="./images/imagesTablet/mihail-tablet.webp 1x, ./images/imagesTablet/mihail-tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp" />
+                            <source
+                                srcset="./images/imagesTablet/mihail-tablet.jpg 1x, ./images/imagesTablet/mihail-tablet@2x.jpg 2x"
+                                media="(min-width: 768px)" />
+                            <source
+                                srcset="./images/imagesMobile/mihail.webp 1x, /images/imagesMobile/mihail@2x.webp 2x"
+                                media="(max-width: 767px)" type="image/webp" />
+                            <source srcset="./images/imagesMobile/mihail.jpg 1x, ./images/imagesMobile/mihail@2x.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <img src="./images/mihail.jpg" alt="Михаил Ермаков" />
+                        </picture>
+
                         <div class="members-wrapper">
                             <h3 class="members-name">Михаил Ермаков</h3>
                             <p class="members-profession" lang="en">UI Designer</p>
@@ -322,7 +416,7 @@
                 </ul>
             </div>
         </section>
-        <!--<section class="clients section">
+        <section class="clients section">
             <div class="container">
                 <h2 class="description__title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
@@ -370,7 +464,7 @@
                 </ul>
 
             </div>
-        </section>-->
+        </section>
     </main>
     <!-- <footer class="adress">
         <div class="container footer-container">
