--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <source
                                 srcset="./images/imagesTablet/igor-tablet.jpg 1x, ./images/imagesTablet/igor-tablet@2x.jpg 2x"
                                 media="(min-width: 768px)" />
-                            <source srcset="./images/imagesMobile/igor.webp 1x, /images/imagesMobile/igor@2x.webp 2x"
+                            <source srcset="./images/imagesMobile/igor.webp 1x, ./images/imagesMobile/igor@2x.webp 2x"
                                 media="(max-width: 767px)" type="image/webp" />
                             <source srcset="./images/imagesMobile/igor.jpg 1x, ./images/imagesMobile/igor@2x.jpg 2x"
                                 media="(max-width: 767px)" />
@@ -272,7 +272,7 @@
                             <source
                                 srcset="./images/imagesTablet/olga-tablet.jpg 1x, ./images/imagesTablet/olga-tablet@2x.jpg 2x"
                                 media="(min-width: 768px)" />
-                            <source srcset="./images/imagesMobile/olga.webp 1x, /images/imagesMobile/olga@2x.webp 2x"
+                            <source srcset="./images/imagesMobile/olga.webp 1x, ./images/imagesMobile/olga@2x.webp 2x"
                                 media="(max-width: 767px)" type="image/webp" />
                             <source srcset="./images/imagesMobile/olga.jpg 1x, ./images/imagesMobile/olga@2x.jpg 2x"
                                 media="(max-width: 767px)" />
@@ -375,7 +375,7 @@
                                 srcset="./images/imagesTablet/mihail-tablet.jpg 1x, ./images/imagesTablet/mihail-tablet@2x.jpg 2x"
                                 media="(min-width: 768px)" />
                             <source
-                                srcset="./images/imagesMobile/mihail.webp 1x, /images/imagesMobile/mihail@2x.webp 2x"
+                                srcset="./images/imagesMobile/mihail.webp 1x, ./images/imagesMobile/mihail@2x.webp 2x"
                                 media="(max-width: 767px)" type="image/webp" />
                             <source srcset="./images/imagesMobile/mihail.jpg 1x, ./images/imagesMobile/mihail@2x.jpg 2x"
                                 media="(max-width: 767px)" />
