--- a/index.html
+++ b/index.html
@@ -466,55 +466,57 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="adress">
+    <footer class="adress">
         <div class="container footer-container">
-
-            <div>
-                <a lang="en" href="" class="logo logo-footer"><span class="logo-accent">Web</span>Studio</a>
-                <address>
-                    <ul class="adress-list list">
-                        <li class="adress-list-item"><a href="https://goo.gl/maps/Eq5jRLe5XYkMgJvZ7"
-                                class="adress-item map link">г. Киев, пр-т
-                                Леси
-                                Украинки,
-                                26</a></li>
-                        <li class="adress-list-item"><a href="mailto:info@devstudio.com"
-                                class="adress-item contacts link">info@devstudio.com</a>
+            <div class="adress-footer">
+                <div>
+                    <a lang="en" href="" class="logo logo-footer"><span class="logo-accent">Web</span>Studio</a>
+                    <address>
+                        <ul class="adress-list list">
+                            <li class="adress-list-item"><a href="https://goo.gl/maps/Eq5jRLe5XYkMgJvZ7"
+                                    class="adress-item map link">г. Киев, пр-т
+                                    Леси
+                                    Украинки,
+                                    26</a></li>
+                            <li class="adress-list-item"><a href="mailto:info@devstudio.com"
+                                    class="adress-item contacts link">info@devstudio.com</a>
+                            </li>
+                            <li class="adress-list-item"><a href="tel:+380961111111"
+                                    class="adress-item contacts link">+38
+                                    096 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="invent">
+                    <p class="invent-footer">Присоединяйтесь</p>
+                    <ul class="social-list list">
+                        <li class="social-list__item">
+                            <a class="social-list__link link-footer link" href=""><svg class="social-list__icon"
+                                    width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg></a>
                         </li>
-                        <li class="adress-list-item"><a href="tel:+380961111111" class="adress-item contacts link">+38
-                                096 111 11 11</a></li>
+                        <li class="social-list__item">
+                            <a class="social-list__link link-footer link" href=""><svg class="social-list__icon"
+                                    width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-list__item">
+                            <a class="social-list__link link-footer link" href=""><svg class="social-list__icon"
+                                    width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="social-list__item">
+                            <a class="social-list__link link-footer link" href=""><svg class="social-list__icon"
+                                    width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg></a>
+                        </li>
                     </ul>
-                </address>
-            </div>
-            <div class="invent">
-                <p class="invent-footer">Присоединяйтесь</p>
-                <ul class="social-list list">
-                    <li class="social-list__item">
-                        <a class="social-list__link link-footer link" href=""><svg class="social-list__icon" width="20"
-                                height="20">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-list__item">
-                        <a class="social-list__link link-footer link" href=""><svg class="social-list__icon" width="20"
-                                height="20">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-list__item">
-                        <a class="social-list__link link-footer link" href=""><svg class="social-list__icon" width="20"
-                                height="20">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg></a>
-                    </li>
-                    <li class="social-list__item">
-                        <a class="social-list__link link-footer link" href=""><svg class="social-list__icon" width="20"
-                                height="20">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg></a>
-                    </li>
-                </ul>
 
+                </div>
             </div>
             <div class="subscription">
                 <p class="invent-footer">Подпишитесь на рассылку</p>
@@ -534,7 +536,7 @@
 
             </div>
         </div>
-    </footer>-->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
