--- a/portfolio.html
+++ b/portfolio.html
@@ -147,13 +147,13 @@
                                     Все это позволит посетителю получить
                                     исчерпывающие сведения о компании или частном лице.</p>
                             </div>
-                            <div class="galery-wrapper">
+                            <div class="galery-wrapper galery-wrapper_first">
                                 <h2 class="galery-images-name">Технокряк</h2>
                                 <p class="galery-images-description">Веб-сайт</p>
 
                             </div>
                         </a>
-                        </li">
+                    </li>
                     <li class="galery-item"><a href="" class="galery-link link">
                             <div class="galery-images-box">
                                 <picture>
@@ -173,7 +173,7 @@
                                     <source
                                         srcset="./images/imagesMobile/portfolio2.jpg 1x, ./images/imagesMobile/portfolio2@2x.jpg 2x"
                                         media="(max-width: 767px)" />
-                                    <img src="./images/portfolio2.jpg" alt="Баскетболисты" width="370" height="294">
+                                    <img src="./images/portfolio2.jpg" alt="Баскетболисты">
                                 </picture>
 
                                 <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
